--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
-    "nodemon": "^1.19.4",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mongoose": "^5.7.10",
+    "nodemon": "^1.19.4"
   }
 }
